--- a/todo
+++ b/todo
@@ -1,2 +1,4 @@
 1. Make todo list with JS, HTML & CSS
 2. Publish it to my GitHub via Git
+A new feature is now added:
+You  can add more than 2 to do items!
